v2.6: Fixed wrapping issue of main-section

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -179,7 +179,7 @@ body {
 
 .main-section .flex {
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     min-height: 70vh;
 }
@@ -307,6 +307,6 @@ body {
 }
 
 /* MEDIA QUERIES */
-@media screen and (max-width:700px) {
-  
+@media screen and (max-width:900px) {
+    
 }
